Overflow on nodebar fixed

--- a/ROSBLOCKS/src/app/workspace/workspace.component.css
+++ b/ROSBLOCKS/src/app/workspace/workspace.component.css
@@ -11,6 +11,8 @@
 
 .nodebar {
   height: auto;
+  width: calc(100vw - 15vw - 250px);
+  overflow-y: hidden;
 }
 
 .workspaceContainer {
